--- a/doi-confirmation.html
+++ b/doi-confirmation.html
@@ -54,20 +54,23 @@
       statusEl.classList.add("error");
     } else {
       const zapierURL = `https://hooks.zapier.com/hooks/catch/6735747/20aowe2/?Id=${encodeURIComponent(id)}`;
-      const img = new Image();
-      img.src = zapierURL;
-      img.onload = () => {
+
+      const iframe = document.createElement("iframe");
+      iframe.src = zapierURL;
+      iframe.style.display = "none";
+      iframe.onload = () => {
         headlineEl.textContent = "You're In! ✅";
         statusEl.textContent = "Thanks for confirming your subscription to Wastefree.";
       };
-      img.onerror = () => {
+      iframe.onerror = () => {
         headlineEl.textContent = "Subscription Confirmation Error";
         statusEl.textContent = "⚠️ Could not notify our system. Please try again later.";
         statusEl.classList.add("error");
       };
-      document.body.appendChild(img);
+
+      document.body.appendChild(iframe);
     }
   </script>
 </body>
 </html>
-2
+3
