--- a/unsubscribe-confirmation.html
+++ b/unsubscribe-confirmation.html
@@ -81,7 +81,7 @@
 
     const translations = {
       en: {
-        title: "Processing your request........",
+        title: "Processing your request...",
         description: "Please wait while we unsubscribe you from future Wastefree updates.",
         successTitle: "You’ve been unsubscribed",
         successMessage: "You’ve been successfully removed from our mailing list. If you change your mind, you can re-subscribe anytime through our website.",
