--- a/unsubscribe-confirmation.html
+++ b/unsubscribe-confirmation.html
@@ -44,7 +44,7 @@
       margin-top: 30px;
     }
     .success {
-      color: #2e7d32;
+      color: #555;
     }
     .error {
       color: #c62828;
